Name:         mtl
Version:      1.1.1.1
License:      BSD3
License-File: LICENSE
Author:       Andy Gill
Maintainer:   libraries@haskell.org
Category:     Control
Synopsis:     Monad transformer library
Description:
    A monad transformer library, inspired by the paper /Functional
    Programming with Overloading and Higher-Order Polymorphism/,
    by Mark P Jones (<http://web.cecs.pdx.edu/~mpj/pubs/springschool.html>),
    Advanced School of Functional Programming, 1995.
Build-Type:    Simple
Cabal-Version: >= 1.6

Library
    Build-Depends: base < 5

    Exposed-Modules:
        Control.Monad.Cont
        Control.Monad.Cont.Class
        Control.Monad.Error
        Control.Monad.Error.Class
        Control.Monad.Identity
        Control.Monad.List
        Control.Monad.RWS
        Control.Monad.RWS.Class
        Control.Monad.RWS.Lazy
        Control.Monad.RWS.Strict
        Control.Monad.Reader
        Control.Monad.Reader.Class
        Control.Monad.State
        Control.Monad.State.Class
        Control.Monad.State.Lazy
        Control.Monad.State.Strict
        Control.Monad.Trans
        Control.Monad.Writer
        Control.Monad.Writer.Class
        Control.Monad.Writer.Lazy
        Control.Monad.Writer.Strict

    Ghc-Options: -Wall

    Extensions: MultiParamTypeClasses,
                FunctionalDependencies,
                FlexibleInstances,
                TypeSynonymInstances

    -- Compile all modules as __Safe__ modules
    if impl(ghc >= 7.2)
        Extensions: Safe

